force-app/main/default/objects/RW_FAQ__c/RW_FAQ__c.object-meta.xml
<CustomObject>
    <label>FAQ</label>
    <nameField>
        <label>RW_Faq Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FAQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>