force-app/main/default/objects/RW_FAQ__c/fields/RW_Active__c.field-meta.xml
<CustomField>
    <fullName>RW_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>