force-app/main/default/objects/RW_FAQ__c/fields/RW_Answer__c.field-meta.xml
<CustomField>
    <fullName>RW_Answer__c</fullName>
    <label>Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>