force-app/main/default/objects/RW_FAQ__c/fields/RW_Order__c.field-meta.xml
<CustomField>
    <fullName>RW_Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>