force-app/main/default/objects/RW_FAQ__c/fields/RW_Question__c.field-meta.xml
<CustomField>
    <fullName>RW_Question__c</fullName>
    <label>Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>