force-app/main/default/objects/RW_FAQ__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RW_Order__c</columns>
    <columns>RW_Question__c</columns>
    <columns>RW_Answer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Language__c</field>
        <operation>equals</operation>
        <value>English</value>
    </filters>
    <label>All</label>
</ListView>